# the-janitor

./: .dockerignore  .gitignore  Dockerfile  LICENSE  PRIVACY_POLICY.md  README.md  TERMS_OF_SERVICE.md  VERSION  action.yml  benchmark.py  entrypoint.sh  mkdocs.yml  pyproject.toml  requirements.txt  test_symbol_clean.py
.github/workflows/: deploy_docs.yml  example.yml  publish_docker.yml
.janitor_cache/: analysis.db
docs/: PREMIUM_LOGIC.md  TROUBLESHOOTING.md  architecture.md  brain_audit.md  governor_design.md  index.md  performance_fix_proposal.md  premium.md  safety.md  self_heal_plan.md  ui_rearchitecture_proposal.md
gauntlet_samples/: math2.py  test_ast_filter.py  test_structural.py
gauntlet_samples/.janitor_cache/: analysis.db
rules/community/: LICENSE
src/: __init__.py  config.py  main.py
src/analyzer/: __init__.py  cache.py  config_parser.py  extractor.py  graph_builder.py  heuristics.py  js_heuristics.py  js_import_tracker.py  orphan_detector.py  parser.py  reference_tracker.py  resolver.py  wisdom_registry.py
src/brain/: __init__.py  llm.py  memory.py  refactor.py
src/reaper/: __init__.py  js_remover.py  manifest.py  safe_delete.py  sandbox.py  symbol_remover.py
src/utils/: logger.py  safe_console.py
tests/: premium_test.py  stress_test.py  test_config_parser.py  test_fail.py  test_symbol_safety.py
tests/dedup_test/.janitor_cache/: analysis.db
tests/fixtures/config_files/: app.py  docker-compose.yml  order_processor.py  serverless.yml  settings.py  template.yaml
tests/fixtures/config_files/auth/: authorizer.py
tests/fixtures/config_files/dags/: data_pipeline_dag.py
tests/fixtures/config_files/handlers/: image_processor.py  image_upload.py  thumbnail.py
tests/fixtures/config_files/jobs/: cleanup.py
tests/fixtures/config_files/middleware/: request_logging.py
tests/fixtures/config_files/workers/: analytics_worker.py
tools/: sync_version.py
