[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "the-janitor"
version = "1.0.0"
description = "Autonomous dead-code deletion and semantic deduplication using tree-sitter, NetworkX, ChromaDB, and LLM-powered refactoring"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "The Janitor Team"}
]
keywords = ["dead-code", "refactoring", "code-analysis", "tree-sitter", "llm", "chromadb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.12.0,<1.0.0",
    "rich>=13.7.0,<14.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "tree-sitter>=0.25.0,<0.26.0",
    "tree-sitter-python>=0.25.0,<0.26.0",
    "tree-sitter-javascript>=0.25.0,<0.26.0",
    "tree-sitter-typescript>=0.23.0,<0.24.0",
    "networkx>=3.2,<4.0",
    "chromadb>=0.5.0,<0.6.0",
    "sentence-transformers>=3.0.0,<4.0.0",
    "openai>=1.50.0,<2.0.0",
    "tenacity>=9.0.0,<10.0.0",
    "libcst>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
]

[project.scripts]
janitor = "src.main:app"

[project.urls]
Homepage = "https://github.com/the-janitor/the-janitor"
Repository = "https://github.com/the-janitor/the-janitor"
Issues = "https://github.com/the-janitor/the-janitor/issues"

[tool.setuptools]
packages = ["src", "src.analyzer", "src.reaper", "src.brain"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"
